--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "package/src"]
-	path = package/src
+[submodule "graphyti/src"]
+	path = graphyti/src
 	url = https://github.com/disa-mhembere/fg-graphyti.git
