--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include graphyti/src/libsafs/*.h
 include graphyti/src/matrix/*.h
 include graphyti/src/flash-graph/*.h
-include graphyti/src/flash-graph/bindings*.h
+include graphyti/src/flash-graph/bindings/*.h
+include graphyti/src/flash-graph/utils/el2fg.h
 include graphyti/*.pyx
 include *.py
